[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/PU_AdvancedSettings.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PU_AddSet.gd" type="Script" id=2]
[ext_resource path="res://util/blur.shader" type="Shader" id=3]
[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/font medium.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.101961, 0.113725, 0.145098, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.223529, 0.243137, 0.286275, 1 )
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 3 )
shader_param/amount = 4.0

[node name="AddSet" type="PopupDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.0
margin_top = -283.5
margin_right = 246.0
margin_bottom = 283.5
rect_min_size = Vector2( 296, 320 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="Lb_AddSet" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -83.5
margin_top = 16.0
margin_right = 83.5
margin_bottom = 62.0
custom_fonts/font = ExtResource( 4 )
text = "Add a set"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="GridContainer" parent="."]
anchor_top = 0.00333024
anchor_right = 1.0
anchor_bottom = 1.00333
margin_left = 32.0
margin_top = 80.0
margin_right = -32.0
margin_bottom = -32.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_Name" type="Label" parent="Items"]
margin_top = 5.0
margin_right = 64.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 5 )
text = "Name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LE_Name" type="LineEdit" parent="Items"]
margin_left = 68.0
margin_right = 428.0
margin_bottom = 38.0
rect_min_size = Vector2( 128, 24 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 5 )
max_length = 20
placeholder_text = "Name"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="L_Size" type="Label" parent="Items"]
margin_top = 45.0
margin_right = 64.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 5 )
text = "Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MB_Size" type="MenuButton" parent="Items"]
margin_left = 68.0
margin_top = 42.0
margin_right = 106.0
margin_bottom = 76.0
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 5 )
text = "- -"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CB_Distinguishable" type="CheckBox" parent="."]
margin_left = 30.3378
margin_top = 166.875
margin_right = 219.338
margin_bottom = 202.875
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
shortcut_in_tooltip = false
enabled_focus_mode = 0
text = "Distinguishable"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Add" type="Button" parent="."]
margin_left = 337.736
margin_top = 518.016
margin_right = 393.736
margin_bottom = 552.016
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
enabled_focus_mode = 0
text = "Add"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Cancel" type="Button" parent="."]
anchor_top = 0.00182352
anchor_right = 0.0569106
anchor_bottom = 0.00182352
margin_left = 92.5269
margin_top = 518.016
margin_right = 148.527
margin_bottom = 552.016
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
enabled_focus_mode = 0
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_AdvancedSettings" type="Button" parent="."]
anchor_left = -0.000437129
anchor_top = 0.00075232
anchor_right = -0.000437129
anchor_bottom = 0.00075232
margin_left = 252.798
margin_top = 279.71
margin_right = 461.798
margin_bottom = 313.71
focus_mode = 0
custom_fonts/font = ExtResource( 5 )
enabled_focus_mode = 0
text = "Advanced Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PU_AdvancedSettings" type="Popup" parent="."]
margin_left = 1.48993
margin_top = 1.21393
margin_right = 1035.25
margin_bottom = 609.214
popup_exclusive = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="P_AdvancedSettings" type="Panel" parent="PU_AdvancedSettings"]
margin_left = 428.0
margin_top = 115.0
margin_right = 609.0
margin_bottom = 454.0

[node name="ColorRect" type="ColorRect" parent="PU_AdvancedSettings"]
visible = false
material = SubResource( 2 )
margin_left = 359.0
margin_top = 117.0
margin_right = 673.0
margin_bottom = 453.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B_Done" type="Button" parent="PU_AdvancedSettings"]
margin_left = 496.326
margin_top = 427.754
margin_right = 542.326
margin_bottom = 447.754
focus_mode = 0
enabled_focus_mode = 0
text = "Done"

[node name="Popup" type="Popup" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = -74.5
margin_right = 148.0
margin_bottom = 74.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Popup"]
modulate = Color( 0.647059, 0.647059, 0.647059, 0.882353 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="L_Popup" type="Label" parent="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = -16.0
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="button_up" from="B_Add" to="." method="_on_B_Add_button_up"]
[connection signal="button_up" from="B_Cancel" to="." method="_on_B_Cancel_button_up"]
[connection signal="button_up" from="B_AdvancedSettings" to="." method="_on_B_AdvancedSettings_button_up"]
[connection signal="button_up" from="PU_AdvancedSettings/B_Done" to="PU_AdvancedSettings" method="_on_B_Done_button_up"]
